<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/app_name"
        android:textColor="@color/material_dynamic_primary50"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- email input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameCredential"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.19999999"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- password input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordCredential"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameCredential"
        app:layout_constraintVertical_bias="0.050000012"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- forgot password page -->
    <Button
        android:id="@+id/forgorPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/forgot_password"
        android:textColor="#2196F3"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordCredential"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/passwordCredential"
        app:layout_constraintTop_toBottomOf="@+id/passwordCredential" />

    <!-- attempt login -->
    <Button
        android:id="@+id/checkCredentials"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordCredential"
        app:layout_constraintStart_toStartOf="@+id/passwordCredential"
        app:layout_constraintTop_toBottomOf="@+id/passwordCredential"
        app:layout_constraintVertical_bias="0.22000003"
        tools:text="LOG IN" />


    <!-- text for registration -->
    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.334"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkCredentials"
        app:layout_constraintVertical_bias="0.486" />

    <!-- Go to sign up page -->
    <Button
        android:id="@+id/createNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#2196F3"
        android:background="#00FFFFFF"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textRegister"
        app:layout_constraintTop_toBottomOf="@+id/checkCredentials"
        app:layout_constraintVertical_bias="0.486" />

    <!-- optional google sign up text -->

    <!-- Google sign up option -->

    <!--    <com.google.android.gms.common.SignInButton-->
<!--        android:id="@+id/google_sign_in"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:ignore="MissingConstraints" />-->

    <TextView
        android:id="@+id/googleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegister"
        app:layout_constraintVertical_bias="0.461" />

    <Button
        android:id="@+id/googleSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/google_sign_in"
        android:textColor="#717171"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toEndOf="@+id/googleText"
        app:layout_constraintTop_toBottomOf="@+id/textRegister"
        app:layout_constraintVertical_bias="0.416" />

    <ImageView
        android:id="@+id/google_sign_in"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/google" />

</androidx.constraintlayout.widget.ConstraintLayout>