...
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/round_rect"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                tools:layout_editor_absoluteX="22dp">
...
